# cmpt

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
api/: tasks.py  urls.py
api/docs/: comment.py  like.py  photo.py  user.py
api/permissions/: IsOwner.py
api/serializers/: comment.py  photo.py
api/serializers/comment/: create.py  modify.py  show.py
api/serializers/likes/: create.py  show.py
api/serializers/photo/: create.py  delete.py  detail.py  modify.py  show.py  showdeatil.py  showdetail.py  update.py
api/serializers/user/: create.py  delete.py  detail.py  modify.py  show.py
api/services/like/: create.py  (+3 more)
api/views/: comment.py  likes.py  photo.py  user.py
config/: asgi.py  celery.py  settings.py  urls.py
config/settings/: __init__.py  celery.py  database.py  django.py  logging.py  redis.py  restframework.py  settings.py  simplejwt.py  swagger.py
models_app/: models.py  urls.py  views.py
models_app/admin/: __init__.py
models_app/migrations/: 0001_initial.py  0002_remove_comment_comment_date_comment_created_at_and_more.py  0003_photo_title.py  0004_alter_photo_state_alter_photo_title.py  0005_user_profile_pic.py  0006_alter_user_profile_pic.py  0007_comment_parent_comment.py  0008_alter_photo_publication_date_alter_user_birth_date.py  0009_photo_previous_image.py  0010_rename_profile_pic_user_avatar.py  0011_alter_user_avatar.py
models_app/models/: __init__.py
mysite/: urls.py  views.py
mysite/forms/: photo.py
mysite/templates/: account.html  add_photo.html  authorisation.html  authorization.html  callback.html  details.html  edit_photo.html  index.html  registrate.html
mysite/views/: __init__.py  account.py  add_photo.py  auth.py  details.py  edit_photo.py  index.py  registration.py  yandex.py
notifications/: consumers.py  routing.py  services.py
utils/: disable_error_logger_level.py  docs_typed_dict.py  exception_handler.py  pagination.py
(+46 files in other folders)
