[project]
name = "competition"
version = "0.1.0"
description = ""
authors = [
    {name = "Narek",email = "narek7284@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "django-split-settings (>=1.3.2,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
