[project]
name = "competition"
version = "0.1.0"
description = ""
authors = [
    {name = "Narek",email = "narek7284@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "django-split-settings (>=1.3.2,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "rich (>=14.2.0,<15.0.0)",
    "django-request-id (>=1.0.0,<2.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "django-viewflow (>=2.2.14,<3.0.0)",
    "django-oauth-toolkit (>=3.2.0,<4.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-service-objects @ git+ssh://git@github.com/dvkurbatov/django-service-objects.git",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "requests (>=2.32.5,<3.0.0)",
    "types-requests (>=2.32.4.20260107,<3.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.3.0,<5.0.0)",
    "autoflake  (>=2.3.1, <3.0.0)",
    "pyupgrade  (>=3.20.0, <4.0.0)",
    "yesqa  (>=1.5.0, <2.0.0)",
    "flake8  (>=7.3.0, <8.0.0)",
    "bandit  (>=1.8.6, <2.0.0)",
    "pre-commit-hooks  (>=6.0.0, <7.0.0)",
    "black  (>=25.1.0, <26.0.0)",
    "mypy (>=1.18.1, <2.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]
